Bug 505034 - Compiling Nativei386.cpp on MinGW fails because of different syntax of inline asm.  r=graydon